first attemp in tehnical documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,12 @@
 {
     "cSpell.words": [
+        "Biocompatible",
+        "bootloader",
         "eeprom",
+        "heatsink",
         "HERBION",
-        "MOSI"
+        "microcontroller",
+        "MOSI",
+        "platformio"
     ]
 }
