making basic configuration documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,13 @@
     "cSpell.words": [
         "Biocompatible",
         "bootloader",
+        "doxygen",
         "eeprom",
         "heatsink",
         "HERBION",
         "microcontroller",
         "MOSI",
+        "MSYS",
         "platformio"
     ]
 }
