finish basic technical documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "eeprom",
         "heatsink",
         "HERBION",
+        "Iduino",
         "microcontroller",
         "MOSI",
         "MSYS",
